# analizador-de-entidades

./: LICENSE  README.md  analyzer.py  data.json  main.py  pyproject.toml  utils.py
